force-app/main/default/objects/DecisionApplication__c/DecisionApplication__c.object-meta.xml
<CustomObject>
    <label>決裁申請</label>
    <nameField>
        <displayFormat>DA-{000000000}</displayFormat>
        <label>決裁申請名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>