force-app/main/default/objects/DecisionApplication__c/fields/AccountTypeForInput__c.field-meta.xml
<CustomField>
    <fullName>AccountTypeForInput__c</fullName>
    <label>種目</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>普通預金</fullName>
            </value>
            <value>
                <fullName>当座預金</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>