force-app/main/default/objects/DecisionApplication__c/fields/AgencyChargesExclusionTotal__c.field-meta.xml
<CustomField>
    <fullName>AgencyChargesExclusionTotal__c</fullName>
    <label>仲介手数料除計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>