force-app/main/default/objects/DecisionApplication__c/fields/AgencyChargesTaxIncluded__c.field-meta.xml
<CustomField>
    <fullName>AgencyChargesTaxIncluded__c</fullName>
    <label>仲介手数料税込</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>