force-app/main/default/objects/DecisionApplication__c/fields/AntisocialAgreementCollectArrangeDate__c.field-meta.xml
<CustomField>
    <fullName>AntisocialAgreementCollectArrangeDate__c</fullName>
    <label>反社覚書回収手配日</label>
    <type>Date</type>
</CustomField>