force-app/main/default/objects/DecisionApplication__c/fields/AntisocialAgreementCorrespondenceContent__c.field-meta.xml
<CustomField>
    <fullName>AntisocialAgreementCorrespondenceContent__c</fullName>
    <label>反社覚書対応内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>