force-app/main/default/objects/DecisionApplication__c/fields/AntisocialAgreementStorageArriveDate__c.field-meta.xml
<CustomField>
    <fullName>AntisocialAgreementStorageArriveDate__c</fullName>
    <label>反社覚書保管着日</label>
    <type>Date</type>
</CustomField>