force-app/main/default/objects/DecisionApplication__c/fields/ApplicationDestination__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申請先</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DecisionRequestAccountRelation5</relationshipName>
    <type>Lookup</type>
</CustomField>