force-app/main/default/objects/DecisionApplication__c/fields/ApplicationPrecaution__c.field-meta.xml
<CustomField>
    <fullName>ApplicationPrecaution__c</fullName>
    <label>申請時注意事項</label>
    <type>TextArea</type>
</CustomField>