force-app/main/default/objects/DecisionApplication__c/fields/ApplicationSource__c.field-meta.xml
<CustomField>
    <fullName>ApplicationSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>申請元</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DecisionRequestAccountRelation6</relationshipName>
    <type>Lookup</type>
</CustomField>