force-app/main/default/objects/DecisionApplication__c/fields/ApprovalNoticeFreeCommentForParking__c.field-meta.xml
<CustomField>
    <fullName>ApprovalNoticeFreeCommentForParking__c</fullName>
    <label>承認時連絡事項業者宛フリー欄_駐車場</label>
    <type>TextArea</type>
</CustomField>