force-app/main/default/objects/DecisionApplication__c/fields/ApprovalPattern__c.field-meta.xml
<CustomField>
    <fullName>ApprovalPattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認パターン</label>
    <referenceTo>ApprovalPattern__c</referenceTo>
    <relationshipName>ApprovalPatternDR</relationshipName>
    <type>Lookup</type>
</CustomField>