force-app/main/default/objects/DecisionApplication__c/fields/ApprovalPreviousCancelPerson__c.field-meta.xml
<CustomField>
    <fullName>ApprovalPreviousCancelPerson__c</fullName>
    <label>承認前キャンセル者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>