force-app/main/default/objects/DecisionApplication__c/fields/Approver1__c.field-meta.xml
<CustomField>
    <fullName>Approver1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DecisionRequestUserRelation7</relationshipName>
    <type>Lookup</type>
</CustomField>