force-app/main/default/objects/DecisionApplication__c/fields/Approver5__c.field-meta.xml
<CustomField>
    <fullName>Approver5__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認者5</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DecisionRequestUserRelation11</relationshipName>
    <type>Lookup</type>
</CustomField>