force-app/main/default/objects/DecisionApplication__c/fields/AutoSendCorrespondenceFlag__c.field-meta.xml
<CustomField>
    <fullName>AutoSendCorrespondenceFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>決裁申請書自動送信_対応フラグ</label>
    <type>Checkbox</type>
</CustomField>