force-app/main/default/objects/DecisionApplication__c/fields/BankAccountNumForInput__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNumForInput__c</fullName>
    <label>口座番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>