force-app/main/default/objects/DecisionApplication__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>銀行名</label>
    <type>Text</type>
</CustomField>