force-app/main/default/objects/DecisionApplication__c/fields/BankNameForInput__c.field-meta.xml
<CustomField>
    <fullName>BankNameForInput__c</fullName>
    <label>銀行名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>