force-app/main/default/objects/DecisionApplication__c/fields/BeforeApprovalCancelDate__c.field-meta.xml
<CustomField>
    <fullName>BeforeApprovalCancelDate__c</fullName>
    <label>承認前キャンセル日</label>
    <type>Date</type>
</CustomField>