force-app/main/default/objects/DecisionApplication__c/fields/BeforeApprovalCanceller__c.field-meta.xml
<CustomField>
    <fullName>BeforeApprovalCanceller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認前キャンセル者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BeforeApprovalCanceller</relationshipName>
    <type>Lookup</type>
</CustomField>