force-app/main/default/objects/DecisionApplication__c/fields/BillingAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>BillingAmountTotal__c</fullName>
    <label>請求金額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>