force-app/main/default/objects/DecisionApplication__c/fields/BillingDeficiency__c.field-meta.xml
<CustomField>
    <fullName>BillingDeficiency__c</fullName>
    <label>ご請求過不足</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>