force-app/main/default/objects/DecisionApplication__c/fields/BillingRentSubtotal__c.field-meta.xml
<CustomField>
    <fullName>BillingRentSubtotal__c</fullName>
    <formula>BillingRentDailyRateRent__c +  BillingRentDailyRateCommonCharge__c + BillingRentDailyRateParking__c +  BillingRentDailyOther__c</formula>
    <label>請求家賃_小計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>