force-app/main/default/objects/DecisionApplication__c/fields/BillingTaxIncludedAmount__c.field-meta.xml
<CustomField>
    <fullName>BillingTaxIncludedAmount__c</fullName>
    <label>請求税込金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>