force-app/main/default/objects/DecisionApplication__c/fields/BranchOfficeName__c.field-meta.xml
<CustomField>
    <fullName>BranchOfficeName__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>支店名</label>
    <type>Text</type>
</CustomField>