force-app/main/default/objects/DecisionApplication__c/fields/BranchOfficeNameForInput__c.field-meta.xml
<CustomField>
    <fullName>BranchOfficeNameForInput__c</fullName>
    <label>支店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>