force-app/main/default/objects/DecisionApplication__c/fields/CancelCalculate__c.field-meta.xml
<CustomField>
    <fullName>CancelCalculate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約精算</label>
    <referenceTo>CancelCalculate__c</referenceTo>
    <relationshipLabel>決裁申請</relationshipLabel>
    <relationshipName>CancelCalculateDecisionApprication</relationshipName>
    <type>Lookup</type>
</CustomField>