force-app/main/default/objects/DecisionApplication__c/fields/CancelNoticeUnit__c.field-meta.xml
<CustomField>
    <fullName>CancelNoticeUnit__c</fullName>
    <label>解約予告単位</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ヶ月前</fullName>
            </value>
            <value>
                <fullName>日前</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>