force-app/main/default/objects/DecisionApplication__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ケース</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>作業手配依頼</relationshipLabel>
    <relationshipName>Eyg0</relationshipName>
    <type>Lookup</type>
</CustomField>