force-app/main/default/objects/DecisionApplication__c/fields/ChangeMonth__c.field-meta.xml
<CustomField>
    <fullName>ChangeMonth__c</fullName>
    <label>変更月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>