force-app/main/default/objects/DecisionApplication__c/fields/CollectAgreement__c.field-meta.xml
<CustomField>
    <fullName>CollectAgreement__c</fullName>
    <label>回収覚書</label>
    <length>255</length>
    <type>Text</type>
</CustomField>