force-app/main/default/objects/DecisionApplication__c/fields/CollectConflictPreventionTerms__c.field-meta.xml
<CustomField>
    <fullName>CollectConflictPreventionTerms__c</fullName>
    <label>回収紛争防止条例日</label>
    <type>Date</type>
</CustomField>