force-app/main/default/objects/DecisionApplication__c/fields/CollectParkingContractDate__c.field-meta.xml
<CustomField>
    <fullName>CollectParkingContractDate__c</fullName>
    <label>回収駐車場契約書日</label>
    <type>Date</type>
</CustomField>