force-app/main/default/objects/DecisionApplication__c/fields/ContractChangeAgreementStorageDate__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeAgreementStorageDate__c</fullName>
    <label>名変覚書保管日</label>
    <type>Date</type>
</CustomField>