force-app/main/default/objects/DecisionApplication__c/fields/ContractCollectNote__c.field-meta.xml
<CustomField>
    <fullName>ContractCollectNote__c</fullName>
    <label>契約書回収備考</label>
    <type>TextArea</type>
</CustomField>