force-app/main/default/objects/DecisionApplication__c/fields/ContractCorrectionClause1__c.field-meta.xml
<CustomField>
    <fullName>ContractCorrectionClause1__c</fullName>
    <label>契約書訂正条項1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>