force-app/main/default/objects/DecisionApplication__c/fields/ContractCorrectionConfirm1__c.field-meta.xml
<CustomField>
    <fullName>ContractCorrectionConfirm1__c</fullName>
    <label>契約書修正確認1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>