force-app/main/default/objects/DecisionApplication__c/fields/ContractCorrectionKinds1__c.field-meta.xml
<CustomField>
    <fullName>ContractCorrectionKinds1__c</fullName>
    <label>契約書訂正種類1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>