force-app/main/default/objects/DecisionApplication__c/fields/ContractCorrectionPart2_1__c.field-meta.xml
<CustomField>
    <fullName>ContractCorrectionPart2_1__c</fullName>
    <label>契約書訂正箇所２_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>