force-app/main/default/objects/DecisionApplication__c/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <label>契約終了日</label>
    <type>Date</type>
</CustomField>