force-app/main/default/objects/DecisionApplication__c/fields/ContractMoneyContentFree2Fields__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyContentFree2Fields__c</fullName>
    <label>契約金内容フリー2項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>