force-app/main/default/objects/DecisionApplication__c/fields/ContractMoneyContentFree3Amount__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyContentFree3Amount__c</fullName>
    <label>契約金内容フリー3金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>