force-app/main/default/objects/DecisionApplication__c/fields/ContractMoneyContentFree5Fields__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyContentFree5Fields__c</fullName>
    <label>契約金内容フリー5項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>