force-app/main/default/objects/DecisionApplication__c/fields/ContractMoneyContentFree6Amount__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyContentFree6Amount__c</fullName>
    <label>契約金内容フリー6金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>