force-app/main/default/objects/DecisionApplication__c/fields/ContractMoneyContentFree6Fields__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyContentFree6Fields__c</fullName>
    <label>契約金内容フリー6項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>