force-app/main/default/objects/DecisionApplication__c/fields/ContractMoneyRemittanceBankAccountType__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyRemittanceBankAccountType__c</fullName>
    <label>契約金送金_口座種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountType</valueSetName>
    </valueSet>
</CustomField>