force-app/main/default/objects/DecisionApplication__c/fields/ContractMoneyRemittanceBankName__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyRemittanceBankName__c</fullName>
    <label>契約金送金_銀行名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>