force-app/main/default/objects/DecisionApplication__c/fields/ContractMoneyRemittanceBranchOfficeName__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyRemittanceBranchOfficeName__c</fullName>
    <label>契約金送金_支店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>