force-app/main/default/objects/DecisionApplication__c/fields/ContractMoneyTotal__c.field-meta.xml
<CustomField>
    <fullName>ContractMoneyTotal__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>契約金総額</label>
    <type>Text</type>
</CustomField>