force-app/main/default/objects/DecisionApplication__c/fields/ContractReminderUnavailable__c.field-meta.xml
<CustomField>
    <fullName>ContractReminderUnavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>契約書督促不可</label>
    <type>Checkbox</type>
</CustomField>