force-app/main/default/objects/DecisionApplication__c/fields/CustodyDepositDeposit__c.field-meta.xml
<CustomField>
    <fullName>CustodyDepositDeposit__c</fullName>
    <label>預り敷金_敷金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>