force-app/main/default/objects/DecisionApplication__c/fields/CustodyDepositGarageDeposit__c.field-meta.xml
<CustomField>
    <fullName>CustodyDepositGarageDeposit__c</fullName>
    <label>預り敷金_駐車場敷金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>