force-app/main/default/objects/DecisionApplication__c/fields/CustodyRentMonthlyParking__c.field-meta.xml
<CustomField>
    <fullName>CustodyRentMonthlyParking__c</fullName>
    <label>預り家賃_月分駐車場</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>