force-app/main/default/objects/DecisionApplication__c/fields/CustodyRentMonthlyRent__c.field-meta.xml
<CustomField>
    <fullName>CustodyRentMonthlyRent__c</fullName>
    <label>預り家賃_月分家賃</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>