force-app/main/default/objects/DecisionApplication__c/fields/CustodyRentSubtotal__c.field-meta.xml
<CustomField>
    <fullName>CustodyRentSubtotal__c</fullName>
    <formula>CustodyRentMonthlyRent__c +  CustodyRentMonthlyCommonCharge__c +   CustodyRentMonthlyParking__c</formula>
    <label>預り家賃_小計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>