force-app/main/default/objects/DecisionApplication__c/fields/DailyRateManagementDifference__c.field-meta.xml
<CustomField>
    <fullName>DailyRateManagementDifference__c</fullName>
    <label>日割管理差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>