force-app/main/default/objects/DecisionApplication__c/fields/DailyRateParkingDifference__c.field-meta.xml
<CustomField>
    <fullName>DailyRateParkingDifference__c</fullName>
    <label>日割駐車差額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>