force-app/main/default/objects/DecisionApplication__c/fields/DecisionApplicant__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>決裁申請者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DecisionRequestUserRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>