force-app/main/default/objects/DecisionApplication__c/fields/DecisionApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplicationDate__c</fullName>
    <label>決裁申請日</label>
    <type>DateTime</type>
</CustomField>