force-app/main/default/objects/DecisionApplication__c/fields/DecisionApplicationId__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplicationId__c</fullName>
    <externalId>true</externalId>
    <label>決裁申請ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>