force-app/main/default/objects/DecisionApplication__c/fields/DecisionApplicationProgressDaysDisplay__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplicationProgressDaysDisplay__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>決裁申請経過日数表示</label>
    <type>Text</type>
</CustomField>