force-app/main/default/objects/DecisionApplication__c/fields/DecisionReceiptCharge__c.field-meta.xml
<CustomField>
    <fullName>DecisionReceiptCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>決裁受領担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DecisionRequestUserRelation6</relationshipName>
    <type>Lookup</type>
</CustomField>