force-app/main/default/objects/DecisionApplication__c/fields/DecisionType__c.field-meta.xml
<CustomField>
    <fullName>DecisionType__c</fullName>
    <label>決裁種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>更新</fullName>
            </value>
            <value>
                <fullName>条件変更</fullName>
            </value>
            <value>
                <fullName>入替</fullName>
            </value>
            <value>
                <fullName>解約</fullName>
            </value>
            <value>
                <fullName>修繕</fullName>
            </value>
            <value>
                <fullName>名変【個→法】</fullName>
            </value>
            <value>
                <fullName>名変【法→個】</fullName>
            </value>
            <value>
                <fullName>作業手配依頼</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>