force-app/main/default/objects/DecisionApplication__c/fields/del_ReconfirmDate__c.field-meta.xml
<CustomField>
    <fullName>del_ReconfirmDate__c</fullName>
    <label>(不要)再査日</label>
    <type>Date</type>
</CustomField>