force-app/main/default/objects/DecisionApplication__c/fields/DifferenceManagementCharge__c.field-meta.xml
<CustomField>
    <fullName>DifferenceManagementCharge__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>差額_管理費</label>
    <type>Text</type>
</CustomField>