force-app/main/default/objects/DecisionApplication__c/fields/DifferenceRent__c.field-meta.xml
<CustomField>
    <fullName>DifferenceRent__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>差額_家賃</label>
    <type>Text</type>
</CustomField>