force-app/main/default/objects/DecisionApplication__c/fields/DiscountAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmountTotal__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>割引金額合計</label>
    <type>Text</type>
</CustomField>