force-app/main/default/objects/DecisionApplication__c/fields/FaxSendDocument__c.field-meta.xml
<CustomField>
    <fullName>FaxSendDocument__c</fullName>
    <label>FAX送付書類</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>