force-app/main/default/objects/DecisionApplication__c/fields/FreeRentAmount__c.field-meta.xml
<CustomField>
    <fullName>FreeRentAmount__c</fullName>
    <label>フリーレント金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>