force-app/main/default/objects/DecisionApplication__c/fields/FreeRentDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>FreeRentDiscountAmount__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>フリーレント割引金額</label>
    <type>Text</type>
</CustomField>