force-app/main/default/objects/DecisionApplication__c/fields/FreeRentStartDate__c.field-meta.xml
<CustomField>
    <fullName>FreeRentStartDate__c</fullName>
    <label>フリーレント開始日</label>
    <type>Date</type>
</CustomField>