force-app/main/default/objects/DecisionApplication__c/fields/GarageAgencyCharges__c.field-meta.xml
<CustomField>
    <fullName>GarageAgencyCharges__c</fullName>
    <label>駐車場仲介手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>