force-app/main/default/objects/DecisionApplication__c/fields/GasCompanyOpeningContactDestination__c.field-meta.xml
<CustomField>
    <fullName>GasCompanyOpeningContactDestination__c</fullName>
    <label>ガス開栓連絡先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>