force-app/main/default/objects/DecisionApplication__c/fields/ImprintDirectionsNote__c.field-meta.xml
<CustomField>
    <fullName>ImprintDirectionsNote__c</fullName>
    <label>押印指示書備考</label>
    <type>TextArea</type>
</CustomField>