force-app/main/default/objects/DecisionApplication__c/fields/IsAttachedDocument__c.field-meta.xml
<CustomField>
    <fullName>IsAttachedDocument__c</fullName>
    <label>添付書類有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>なし</fullName>
                <default>true</default>
                <label>なし</label>
            </value>
            <value>
                <fullName>あり</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>