force-app/main/default/objects/DecisionApplication__c/fields/LeaseContractExistence__c.field-meta.xml
<CustomField>
    <fullName>LeaseContractExistence__c</fullName>
    <label>賃貸借契約の有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
            <value>
                <fullName>有（但し再整備が必要）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>