force-app/main/default/objects/DecisionApplication__c/fields/LegalApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>LegalApplicationDate__c</fullName>
    <label>リーガル申請日</label>
    <type>Date</type>
</CustomField>