force-app/main/default/objects/DecisionApplication__c/fields/ListViewManagerr__c.field-meta.xml
<CustomField>
    <fullName>ListViewManagerr__c</fullName>
    <formula>$User.AcoountId__c =   RealEstate__r.ContractorName__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>リストビュー_社宅担当者</label>
    <type>Checkbox</type>
</CustomField>