force-app/main/default/objects/DecisionApplication__c/fields/ManagementFax__c.field-meta.xml
<CustomField>
    <fullName>ManagementFax__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>管理FAX</label>
    <type>Text</type>
</CustomField>