force-app/main/default/objects/DecisionApplication__c/fields/MoveMonthParkingFee__c.field-meta.xml
<CustomField>
    <fullName>MoveMonthParkingFee__c</fullName>
    <label>入居月駐車場代</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>