force-app/main/default/objects/DecisionApplication__c/fields/NewContractAdress__c.field-meta.xml
<CustomField>
    <fullName>NewContractAdress__c</fullName>
    <label>新契約_住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>