force-app/main/default/objects/DecisionApplication__c/fields/NewContractCommonCharge__c.field-meta.xml
<CustomField>
    <fullName>NewContractCommonCharge__c</fullName>
    <label>新契約_共益費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>