force-app/main/default/objects/DecisionApplication__c/fields/NewContractContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>NewContractContractEndDate__c</fullName>
    <label>新契約_契約終了日</label>
    <type>Date</type>
</CustomField>