force-app/main/default/objects/DecisionApplication__c/fields/NewContractContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>NewContractContractStartDate__c</fullName>
    <label>新契約_契約開始日</label>
    <type>Date</type>
</CustomField>