force-app/main/default/objects/DecisionApplication__c/fields/NewContractManagementCharge__c.field-meta.xml
<CustomField>
    <fullName>NewContractManagementCharge__c</fullName>
    <label>新契約_管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>