force-app/main/default/objects/DecisionApplication__c/fields/NewContractParking__c.field-meta.xml
<CustomField>
    <fullName>NewContractParking__c</fullName>
    <label>新契約_駐車場</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>