force-app/main/default/objects/DecisionApplication__c/fields/NewContractRealEstate__c.field-meta.xml
<CustomField>
    <fullName>NewContractRealEstate__c</fullName>
    <label>新契約_物件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>