force-app/main/default/objects/DecisionApplication__c/fields/NewContractRentTotal__c.field-meta.xml
<CustomField>
    <fullName>NewContractRentTotal__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>新契約_月額合計</label>
    <type>Text</type>
</CustomField>