force-app/main/default/objects/DecisionApplication__c/fields/NewContractRoom__c.field-meta.xml
<CustomField>
    <fullName>NewContractRoom__c</fullName>
    <label>新契約_号室</label>
    <length>255</length>
    <type>Text</type>
</CustomField>