force-app/main/default/objects/DecisionApplication__c/fields/NewRentRemittanceStartMonth__c.field-meta.xml
<CustomField>
    <fullName>NewRentRemittanceStartMonth__c</fullName>
    <label>新家賃での送金開始月</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>