force-app/main/default/objects/DecisionApplication__c/fields/NextMonthParkingFee__c.field-meta.xml
<CustomField>
    <fullName>NextMonthParkingFee__c</fullName>
    <label>翌月駐車場代</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>