force-app/main/default/objects/DecisionApplication__c/fields/NonRefundableFeeType__c.field-meta.xml
<CustomField>
    <fullName>NonRefundableFeeType__c</fullName>
    <label>敷引種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>礼金扱い</fullName>
            </value>
            <value>
                <fullName>補修費含む</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>