force-app/main/default/objects/DecisionApplication__c/fields/NumberOfResidents__c.field-meta.xml
<CustomField>
    <fullName>NumberOfResidents__c</fullName>
    <label>入居人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>