force-app/main/default/objects/DecisionApplication__c/fields/Other1__c.field-meta.xml
<CustomField>
    <fullName>Other1__c</fullName>
    <label>その他1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>