force-app/main/default/objects/DecisionApplication__c/fields/OtherAmount3__c.field-meta.xml
<CustomField>
    <fullName>OtherAmount3__c</fullName>
    <label>その他３金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>