force-app/main/default/objects/DecisionApplication__c/fields/OtherContent__c.field-meta.xml
<CustomField>
    <fullName>OtherContent__c</fullName>
    <label>その他内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>