force-app/main/default/objects/DecisionApplication__c/fields/OtherFields2__c.field-meta.xml
<CustomField>
    <fullName>OtherFields2__c</fullName>
    <label>その他２項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>