force-app/main/default/objects/DecisionApplication__c/fields/OtherFields4__c.field-meta.xml
<CustomField>
    <fullName>OtherFields4__c</fullName>
    <label>その他４項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>