force-app/main/default/objects/DecisionApplication__c/fields/OtherRenewalCostDetail1__c.field-meta.xml
<CustomField>
    <fullName>OtherRenewalCostDetail1__c</fullName>
    <label>その他更新費用明細1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>