force-app/main/default/objects/DecisionApplication__c/fields/OtherRenewalCostDetail2__c.field-meta.xml
<CustomField>
    <fullName>OtherRenewalCostDetail2__c</fullName>
    <label>その他更新費用明細2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>