force-app/main/default/objects/DecisionApplication__c/fields/OtherRenewalCostDetail3__c.field-meta.xml
<CustomField>
    <fullName>OtherRenewalCostDetail3__c</fullName>
    <label>その他更新費用明細3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>