force-app/main/default/objects/DecisionApplication__c/fields/OtherRenewalCostFields1__c.field-meta.xml
<CustomField>
    <fullName>OtherRenewalCostFields1__c</fullName>
    <label>その他更新費用項目1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>