force-app/main/default/objects/DecisionApplication__c/fields/OtherRenewalCostFields2__c.field-meta.xml
<CustomField>
    <fullName>OtherRenewalCostFields2__c</fullName>
    <label>その他更新費用項目2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>