force-app/main/default/objects/DecisionApplication__c/fields/OtherRenewalCostFields3__c.field-meta.xml
<CustomField>
    <fullName>OtherRenewalCostFields3__c</fullName>
    <label>その他更新費用項目3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>