force-app/main/default/objects/DecisionApplication__c/fields/OtherReportInfo1__c.field-meta.xml
<CustomField>
    <fullName>OtherReportInfo1__c</fullName>
    <label>その他報告情報1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>